MovementInputHandler basic functionallity

--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>ivan_belyj.commanderchess/ivan_belyj.commanderchess.HelloApplication</mainClass>
+                            <mainClass>ivan_belyj.commanderchess/ivan_belyj.commanderchess.Application</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
